# galemind

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
assets/: galemind.xcf
docs/: docusaurus.config.ts  package-lock.json
docs/design/: batching.md
docs/src/pages/: index.tsx
engine/: engine.rs
models/: Makefile  README.md  main.py  pyproject.toml
models/model/: __init__.py  digit_detection.py
models/src/gm_models/model/: __init__.py
models/src/gm_models/train/: __main__.py  cli.py
models/train/: cli.py
src/: main.rs
src/client/: Makefile  README.md
src/client/go/: Makefile
src/client/python/: Makefile  pyproject.toml
src/client/python/galemind/: api.py
src/foundation/: Cargo.toml
src/foundation/src/: lib.rs
src/foundation/src/api/: fake.rs  inference.rs  mod.rs  tensor.rs
src/foundation/src/api/inference/: mod.rs
src/foundation/src/api/model/: mod.rs
src/galemind/: Cargo.toml  main.rs  mod.rs
src/galemind/api/: mod.rs  tensor.rs
src/galemind/api/config/: mod.rs
src/galemind/api/inference/: mod.rs
src/galemind/api/model/: mod.rs
src/galemind/config/: config.rs
src/galemind/inference/: fake.rs  mod.rs
src/galemind/src/: main.rs
src/gm_client/: example_client.py
src/gm_client/galemind/: prediction_pb2.py  prediction_pb2_grpc.py
src/grpc_server/: Cargo.toml  build.rs
src/grpc_server/proto/health_check/: health_check.proto
src/grpc_server/proto/prediction/: prediction.proto
src/grpc_server/src/: lib.rs  main.rs
src/rest_server/: Cargo.toml  builder.rs  handlers.rs  healthcheck.rs  mod.rs  model.rs
src/rest_server/src/: data_model.rs  data_server.rs  datamodel.rs  healthcheck.rs  lib.rs  metadata_model.rs  mod.rs  model.rs  server.rs
src/server/: server.rs
tests/: api_tests.rs
