[project]
name = "galemind-models"
version = "0.1.0"
description = "Sample models package to test your engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff>=0.11.8",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "typer>=0.15.3",
]
[project.scripts]
train = "train.__main__:app"
