[project]
name = "galemind-models"
version = "0.1.0"
description = "Sample Train models"
dependencies = [
    "ruff>=0.11.8",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "typer>=0.15.3",
]

[project.scripts]
train = "galemind_models.train.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
