[package]
name = "galemind"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
hyper = "1.6.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros"] }
tower-http = { version = "0.6.4", features = ["trace"] }
clap = "4.5.38"
foundation = { path = "../foundation" }
grpc_server = { path = "../grpc_server" }
rest_server = { path = "../rest_server" }
