[package]
name = "grpc_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros", "net"] }
tonic = { version = "0.13.1", features = ["transport"] }
prost = "0.13.5"

[build-dependencies]
tonic-build = "0.13.1"
foundation = { path = "../foundation" }

