[package]
name = "rest_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
clap = "4.5.37"
hyper = "1.6.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros"] }
tower-http = { version = "0.6.4", features = ["trace"] }
foundation = { path = "../foundation" }
async-trait = "0.1.88"
